--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -29,17 +29,17 @@ jobs:
         env:
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         run: |
-          az login --service-principal -u "7fc5a120-b50a-4f25-b47f-087e16e6d1ec" -p "$ARM_CLIENT_SECRET" --tenant "b6f9f524-e9ad-419e-ba1d-d931e71a49e7"
+          az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
           az account list
           
       - name: Plan
         env: 
           ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         run: |
-          export ARM_SUBSCRIPTION_ID=6373a576-34f3-45e5-b060-222a851b6762
+          export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
           export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
-          export ARM_TENANT_ID=b6f9f524-e9ad-419e-ba1d-d931e71a49e7
-          export ARM_CLIENT_ID=7fc5a120-b50a-4f25-b47f-087e16e6d1ec
+          export ARM_TENANT_ID=$ARM_TENANT_ID
+          export ARM_CLIENT_ID=$ARM_CLIENT_ID
           export ARM_LOCATION=canadacentral
           terraspace up bcp -auto-approve
           
