--- a/.github/workflows/plan.yml
+++ b/.github/workflows/plan.yml
@@ -5,7 +5,11 @@ on:
     branches: [ main ]
 
   workflow_dispatch:
-
+env: 
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
 jobs:
   plan:
     runs-on: ubuntu-latest
@@ -26,20 +30,16 @@ jobs:
         run: az version
         
       - name: az Login
-        env:
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+        # env:
+          # ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+          # ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+          # ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
         run: |
           az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
           az account list
           
       - name: Plan
-        env: 
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
-          ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
-          ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
-          ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+       
         run: |
           export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
           export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
