--- a/.github/workflows/apply.yml
+++ b/.github/workflows/apply.yml
@@ -6,6 +6,12 @@ on:
 
   workflow_dispatch:
 
+env: 
+  ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
+  ARM_CLIENT_ID: ${{ secrets.ARM_CLIENT_ID }}
+  ARM_TENANT_ID: ${{ secrets.ARM_TENANT_ID }}
+  ARM_SUBSCRIPTION_ID: ${{ secrets.ARM_SUBSCRIPTION_ID }}
+
 jobs:
   apply:
     runs-on: ubuntu-latest
@@ -26,15 +32,11 @@ jobs:
         run: az version
         
       - name: az Login
-        env:
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         run: |
           az login --service-principal -u "$ARM_CLIENT_ID" -p "$ARM_CLIENT_SECRET" --tenant "$ARM_TENANT_ID"
           az account list
           
       - name: Plan
-        env: 
-          ARM_CLIENT_SECRET: ${{ secrets.ARM_CLIENT_SECRET }}
         run: |
           export ARM_SUBSCRIPTION_ID=$ARM_SUBSCRIPTION_ID
           export ARM_CLIENT_SECRET=$ARM_CLIENT_SECRET
